# ECMA_projet

./: CMakeLists.txt  ECMA.cpp  ECMA.h  ECMA_heuristic.cpp  ECMA_heuristic.h  README.md  general_classes.h  main.cpp  results.csv  write_files.cpp  write_files.h
solutions/: complete_solution_cutting_planes_n_10-euclidean_false.txt  complete_solution_cutting_planes_n_10-euclidean_true.txt  complete_solution_cutting_planes_n_11-euclidean_false.txt  complete_solution_cutting_planes_n_11-euclidean_true.txt  complete_solution_cutting_planes_n_12-euclidean_false.txt  complete_solution_cutting_planes_n_12-euclidean_true.txt  complete_solution_cutting_planes_n_13-euclidean_false.txt  complete_solution_cutting_planes_n_13-euclidean_true.txt  complete_solution_cutting_planes_n_14-euclidean_false.txt  complete_solution_cutting_planes_n_14-euclidean_true.txt  complete_solution_cutting_planes_n_15-euclidean_false.txt  complete_solution_cutting_planes_n_15-euclidean_true.txt  complete_solution_cutting_planes_n_16-euclidean_false.txt  complete_solution_cutting_planes_n_16-euclidean_true.txt  complete_solution_cutting_planes_n_17-euclidean_false.txt  complete_solution_cutting_planes_n_17-euclidean_true.txt  complete_solution_cutting_planes_n_18-euclidean_false.txt  complete_solution_cutting_planes_n_18-euclidean_true.txt  complete_solution_cutting_planes_n_19-euclidean_false.txt  complete_solution_cutting_planes_n_19-euclidean_true.txt  complete_solution_cutting_planes_n_20-euclidean_false.txt  complete_solution_cutting_planes_n_20-euclidean_true.txt  (+531 more)
